--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
             <div class="container">
                 <nav>
                     <img src="images/namelogo.png" class="logo">
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Portfolio</a></li>
-                        <li><a href="#">Contact</a></li>
+                    <ul id="sidemenu">
+                        <li><a href="#header">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#Services">Services</a></li>
+                        <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#Contact">Contact</a></li>
+                        <!-- <i class="fas fa-times" onclick="closemenu()"></i> -->
                     </ul>
                 </nav>
-            </div class="header-text">
-            <centre><p>Frontend Developer</p>
-           <h1>Hi,I'm <span>Prasanna R</span></centre> 
-            </div>
+            <div class="header-text">
+            <h1>Frontend Developer<br>
+           Hi,I'm <span>Prasanna R</span> </h1>
           </div>
+     </div>   
+ </div>
 <!-- about -->
           <div id="about">
             <div class="container">
@@ -131,8 +133,36 @@
         <a href="#" class="btn">See More</a>
     </div>
 </div>
-
-
+<!------------------contact ---------------------- -->
+<div id="Contact">
+    <div class="container">
+        <div class="row">
+            <div class="contact-left">
+                <h1 class="sub-title">Contact Me</h1>
+                <p><i class="fa-regular fa-paper-plane"></i>rprasanna1216@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>9791206375</p>
+                <div class="social-icons">
+                    <a href="https://facebook.com/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+                    <a href=""><i class="fa-brands fa-facebook"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                </div>
+                <a href="images/My Resume.docx" download class="btn btn2">Download CV</a>
+            </div>
+                <div class="contact-right">
+                    <form>
+                        <input type="text" name="Name" placeholder="Your Name" required>
+                        <input type="email" name="email" placeholder="Your Email" required>
+                        <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                        <button type="submit" class="btn btn2">Sumbit</button>
+                    </form>
+                </div>
+        </div>
+    </div>
+    <div class="copyright">
+        <p>Copyright Prasanna.Made for learning</p>
+    </div>
+</div>
 
 <script>
             var tablinks =document.getElementsByClassName("tab-links");
@@ -149,6 +179,16 @@
                 document.getElementsById(tabname).classList.add("active-tab");
             }
 
+          </script>
+          <script>
+            var sidemenu=document.getElementById("sidemenu");
+
+           function openmenu(){
+            sidemenu.style.right = "0";
+           }
+           function closemenu(){
+            sidemenu.style.right = "-200px"; 
+           }
           </script>
     </body>
 </h
