--- a/index.html
+++ b/index.html
@@ -150,12 +150,13 @@
                 <a href="images/My Resume.docx" download class="btn btn2">Download CV</a>
             </div>
                 <div class="contact-right">
-                    <form>
+                    <form name="submit-to-google-sheet">
                         <input type="text" name="Name" placeholder="Your Name" required>
                         <input type="email" name="email" placeholder="Your Email" required>
                         <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
                         <button type="submit" class="btn btn2">Sumbit</button>
                     </form>
+                    <span id="msg"></span>
                 </div>
         </div>
     </div>
@@ -189,6 +190,24 @@
            function closemenu(){
             sidemenu.style.right = "-200px"; 
            }
+          </script>
+          <script>
+            const scriptURL = 'https://script.google.com/macros/s/AKfycby2na8HptFvQ-Z0g0CXKgio0_Ky-s_vYh6UbYoJlFevmJOh5BfxyiHjzWUWdTt_Bwey8w/exec'
+            const form = document.forms['submit-to-google-sheet']
+            const msg = document.getElementById("msg")
+
+            form.addEventListener('submit', e => {
+              e.preventDefault()
+              fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+                .then(response => {
+                    msg.innerHTML = "Message sent successfully"
+                    setTimeout(function(){
+                        msg.innerHTML = ""
+                    },5000)
+                    form.reset()
+                })
+                .catch(error => console.error('Error!', error.message))
+            })
           </script>
     </body>
 </h
