works were updated

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
                                 <li><span>UI/UX</span><br>Designing Web/App interface </li>
-                                <li><span>Web Development</span><br>Web app Development </li>
+                                <li><span>Web Development</span><br>Web Development </li>
                                 <li><span>App Development</span><br>Building Android/ios apps </li>
 
                             </ul>
@@ -79,19 +79,19 @@
               <div>
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Desing</h2>
-                <p>strghs satrhast thjyd tyhsryh seth srth sdrtyhst vhjdyt yaeuhof iyuge fbaoueg bfolg fbqjhoa  Iae fg iEF </p>
+                <p> </p>
               <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop"></i>
                 <h2>UI/UX Desing</h2>
-                <p>strghs satrhast thjyd tyhsryh seth srth sdrtyhst vhjdyt yaeuhof iyuge fbaoueg bfolg fbqjhoa  Iae fg iEF </p>
+                <p></p>
               <a href="#">Learn more</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store-ios"></i>
                 <h2>App Desing</h2>
-                <p>strghs satrhast thjyd tyhsryh seth srth sdrtyhst vhjdyt yaeuhof iyuge fbaoueg bfolg fbqjhoa  Iae fg iEF </p>
+                <p>Done 5+ APP using FLUTTER in Android Studio </p>
               <a href="#">Learn more</a>
             </div>
                 </div>
@@ -105,27 +105,24 @@
             <div class="work">
                 <img src="images/work-1.png">
                 <div class="layer">
-                    <h3>Sociak Media App</h3>
-                    <p> The app connects you to the talented people the world.
-                        Download it from the play store.</p>
+                    <h3>Expense Tracker App</h3>
+                    <p> A smart expense tracker app built using Android Studio to efficiently manage and visualize daily and weekly expenses..</p>
                         <a href="#"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/work-2.png">
                 <div class="layer">
-                    <h3>Music App</h3>
-                    <p> The app connects you to the talented people the world.
-                        Download it from the play store.</p>
+                    <h3>TO DO LIST App</h3>
+                    <p> A to-do list app built with Dart and Flutter in Android Studio, allowing users to add, edit, delete, and track tasks efficiently.</p>
                         <a href="#"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="images/work-3.png">
                 <div class="layer">
-                    <h3>Online Shopping App</h3>
-                    <p> The app connects you to the talented people the world.
-                        Download it from the play store.</p>
+                    <h3>Stop Watch app</h3>
+                    <p> A stopwatch app built with Flutter and Dart in Android Studio, featuring start, pause, reset, and lap functionality for precise time tracking..</p>
                         <a href="#"><i class="fas fa-external-link-alt"></i></a>
                 </div>
             </div>
@@ -161,7 +158,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>Copyright Prasanna.Made for learning</p>
+        <p>Copyright by Prasanna.</p>
     </div>
 </div>
 
